--- a/form.html
+++ b/form.html
@@ -39,5 +39,13 @@
     You bizzles forgot, Slizzle does not give a fuck
 </p>
 
+<p>
+    <ol>
+        <li>Till i Collapse</li>
+        <li>Lose Yourself</li>
+        <li>Rap God</li>
+      </ol>
+</p>
+
 </body>
 </html>
