--- a/prvi domaci/index.html
+++ b/prvi domaci/index.html
@@ -5,6 +5,13 @@
 </head>
 <body>
 
+    
+
+<header>
+    <h1><a href="form.html">form</a></h1>
+ </header>
+
+    <br>
 <h1>Till</h1>
 <h2>I</h2>
 <h2>Collapse</h2>
@@ -47,5 +54,10 @@
       </ol>
 </p>
 
+<br>
+
+<footer>
+    <h1><a href="form.html">form</a></h1>
+</footer>
 </body>
 </html>
