--- a/druga pred/index.html
+++ b/druga pred/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
   </head>
   <body>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href=""></a>About</a></li>
-            <li><a href=""></a>Contact</a></li>
-        </ul>
-    </nav>
+
+    <div  class="container">
+
+      <header>
+        <nav class="nav">
+          <img src="https://git-scm.com/images/logo@2x.png" alt="logo">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="form.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </nav>
+      <div class="bg-image">
+        <img src="https://git-scm.com/images/logo@2x.png" alt="Git">
+
+      </div>
+      </header>
+     
     <div>
       <h1>This Blog Tite</h1>
       <p>Lorem Ipsum</p>
@@ -34,5 +46,9 @@
       </ol>
 
     </div>
+
+
+    </div>
+    
   </body>
 </html>
