--- a/druga pred/contact.html
+++ b/druga pred/contact.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Photography Blog</title>
 </head>
+
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<div>
-    <a href="index.html">main</a>
-</div>
-<div>
-    
-    <form action="" method="get">
-        <label for="name">name</label>
-        <input type="text" id="name">
-        <label for="mail">email</label>
-        <input type="email" id="mail">
-        <label for="broj">number</label>
-        <input type="number" id="broj">
-        <label for="message">message</label>
-        <textarea name="message">
-        
-        </textarea>
-        <input type="submit">
-    </form>
-</div>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h1>Contact Us</h1>
+        <p>Have questions or suggestions? Feel free to reach out to us!</p>
+
+        <form action="#" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Photography Blog. All rights reserved.</p>
+    </footer>
 
 </body>
+
 </html>
