--- a/druga pred/index.html
+++ b/druga pred/index.html
@@ -18,7 +18,7 @@
             <nav class="nav padding-nav">
                 <img alt="logo" src="./images/logo-brown.png" />
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="footer-col">
                     <p>Links:</p>
-                    <a href="/">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="./about.html">About</a>
                     <a href="./contact.html">Contact</a>
                 </div>
