--- a/druga pred/index.html
+++ b/druga pred/index.html
@@ -21,6 +21,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="sing-in.html">Sign in</a></li>
+                    <li><a href="register.html">Register</a></li>
+                    
                 </ul>
             </nav>
             <div class="bg-image">
