--- a/druga pred/single-post.html
+++ b/druga pred/single-post.html
@@ -25,7 +25,7 @@
         </nav>
     
     <div>
-        <img src="./images/portrait.jpg" alt="portrait">
+        <img src="./images/portrait.jpg" alt="portrait" width="200" height="200">
         <h1>This is my first blog post</h1>
         <span>02.03.2024.</span>
         <p>More about my first blog post</p>
