--- a/druga pred/register.html
+++ b/druga pred/register.html
@@ -50,7 +50,7 @@
         </section>
 
         <div>
-           <img src="./images/team.jpg" alt="register"> 
+           <img src="./images/team.jpg" alt="register" height="300" width="400"> 
         </div>
 
         <footer class="footer">
