--- a/druga pred/sing-in.html
+++ b/druga pred/sing-in.html
@@ -27,7 +27,7 @@
             
         </header>
         <div>
-            <img src="./images/bg-login.jpg" alt="login">
+            <img src="./images/bg-login.jpg" alt="login" height="300" width="400">
         </div>
         <section>
             <h1>Sign in</h1>
