--- a/druga pred/about.html
+++ b/druga pred/about.html
@@ -21,16 +21,38 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="sing-in.html">Sign in</a></li>
+                    <li><a href="register.html">Register</a></li>
                 </ul>
             </nav>
         </nav>
     
-        <section>
+        <div class= "div1">
             <h1>About Us</h1>
             <p>Welcome to our Photography Blog! We are passionate about capturing and sharing moments through our lens. Our
                 team of dedicated photographers is committed to bringing you stunning visuals and inspiring stories. Explore
                 our blog to dive into the world of photography with us.</p>
-        </section>
+                <img src="./images/photo-2.jpg" alt="ph2" height="300" width="300">
+         </div>
+
+         <div class="div2">
+            <h1>About Us</h1>
+            <p>Welcome to our Photography Blog! We are passionate about capturing and sharing moments through our lens. Our
+                team of dedicated photographers is committed to bringing you stunning visuals and inspiring stories. Explore
+                our blog to dive into the world of photography with us.</p>
+                <img src="./images/photographer.jpeg" alt="ph2" height="300" width="300">
+         </div>
+
+         <div class="div3">
+            <h3>Meet our team</h3>
+            <p>get to know the artists</p>
+            <img src="./images/profile.png" alt="pf" height="50" width="50">
+            <p>Kate</p>
+            <img src="./images/profile.png" alt="pf" height="50" width="50">
+            <p>Miller</p>
+            <img src="./images/profile.png" alt="pf" height="50" width="50">
+            <p>Joe</p>
+         </div>
     
         <footer class="footer">
             <div class="flex-row padding-footer">
